PR26482, ASAN: _bfd_xcoff_sizeof_headers coff-rs6000.c:2585

PR 26482
	* coff-rs6000.c (_bfd_xcoff_sizeof_headers): Ignore sections that
	won't be output.